--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: dummy_development
+  database: property_web_scraper_dummy_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
